--- a/.github/workflows/apprunner.yaml
+++ b/.github/workflows/apprunner.yaml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/python@v3
         with:
           python-version: '3.12.6'  
 
