--- a/.github/workflows/apprunner.yaml
+++ b/.github/workflows/apprunner.yaml
@@ -2,36 +2,30 @@ name: App Runner with GitHub
 
 on:
   push:
-    branch:
-    - main
+    branches:
+      - main
   pull_request:
-    branch:
-    - main
+    branches:
+      - main
 
 jobs:
-  build: 
-   runs-on: ubuntu-latest
-   steps:
-    - name: checkout repository 
-      uses: actions/checkout@v4
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-        uses: actions/python@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
         with:
-          python-version: '3.12.6'  
+          python-version: '3.12.6'
 
       - name: Install dependencies
-        uses: BSFishy/pip-action@v1
-        with:
-          packages: |-
-            $(cat requirements.txt)
-          requirements: requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run application
         run: |
           cd apprunner-demo
           python app.py
-
-
-
-  
