--- a/.github/workflows/apprunner.yaml
+++ b/.github/workflows/apprunner.yaml
@@ -27,5 +27,4 @@ jobs:
 
       - name: Run application
         run: |
-          cd apprunner-demo/src
-          python app.py
+          python apprunner-demo/src/app.py
