--- a/.github/workflows/apprunner.yaml
+++ b/.github/workflows/apprunner.yaml
@@ -27,4 +27,5 @@ jobs:
 
       - name: Run application
         run: |
-          python apprunner-demo/src/app.py
+          python app.py
+        working-directory: apprunner-demo/src
