--- a/.github/workflows/apprunner.yaml
+++ b/.github/workflows/apprunner.yaml
@@ -27,5 +27,5 @@ jobs:
 
       - name: Run application
         run: |
-          python app.py
+          python3 app.py
         working-directory: apprunner-demo/src
