--- a/.github/workflows/apprunner.yaml
+++ b/.github/workflows/apprunner.yaml
@@ -25,5 +25,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: echo
-        run:  pwd
+       - name: Run application
+        run: |
+          python3 app.py
+        working-directory: /home/runner/work/apprunner-demo/apprunner-demo
