--- a/.github/workflows/apprunner.yaml
+++ b/.github/workflows/apprunner.yaml
@@ -24,4 +24,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          python3 app.py
+          
+
+      - name: Run application
+        run: |
+          python3 src/app.py
