--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,27 +1,6 @@
-name: App Runner with GitHub
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.12.6'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          
+version: 3.12.6
+runtime: python3
+build:
+  commands:
+    - sudo apt install python3
+    - python app.py
