--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,6 +1,9 @@
-version: 3.12.6
-runtime: python3
+version: 1.0
+runtime: python3 
 build:
   commands:
-    - sudo apt install python3
-    - python app.py
+    build:
+      - pip install pipenv
+      - pipenv install 
+run: 
+  command: python app.py
