--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -2,7 +2,9 @@ version: 1.0
 runtime: python3
 build:
   commands:
-    - pip install flask
+    build:
+      - python -m pip install --upgrade pip
+      - pip install -r requirements.txt
 
 run:
   command: python app.py
